feat(sway): update configuaration

--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -5,25 +5,26 @@
 set $mod Mod4
 set $alt Mod1
 # Home row direction keys, like vim
-set $left H
-set $down J
-set $up K
-set $right L
+set $left  h
+set $down  j
+set $up    k
+set $right l
 # My apps
 set $term foot
 set $browser firefox
-set $fileManager thunar
-set $menu rofi -show combi | xargs swaymsg exec --
+set $fileManager nautilus
+set $menu fuzzel | xargs swaymsg exec --
 
 ### Output configuration
 # man 5 sway-output
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output HDMI-A-1 bg ~/Sync/Images/Desktops/WebbyRelax.png fill
-output HDMI-A-2 bg ~/Sync/Images/Desktops/WebbyMoon.png fill
-output HDMI-A-2 transform 90
-exec swaymsg focus output HDMI-A-1
+# output * bg /run/current-system/sw/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+# lil work addon display
+output "BOE Display 0x00000144" pos -1920 -250 mode 1920x1080@59.940Hz
+# main work display
+output "Dell Inc. DELL G2725D 4H65S34" pos 0 0
 
 ### Input configuration
 # man 5 sway-input
@@ -31,47 +32,29 @@ exec swaymsg focus output HDMI-A-1
 input * {
   natural_scroll enabled
   pointer_accel -0.4
+  xkb_layout "us"
+  xkb_options "ctrl:nocaps"
+  xkb_numlock enabled
+}
+
+seat * {
+  xcursor_theme BreezeX-RosePine-Linux 32
+  hide_cursor when-typing enabled
 }
 
 ### Idle configuration
-exec swayidle -w \
-       timeout 300 'swaylock --daemonize' \
-       timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
-       before-sleep 'swaylock --daemonize'
-
-###  Theme
-gaps inner 5
-smart_gaps off
-
-default_border pixel 2
-default_floating_border none
-
-set $color_normal_bg     #282828
-set $color_normal_red    #cc241d
-set $color_normal_green  #98971a
-set $color_normal_yellow #d79921
-set $color_bright_yellow #fabd2f
-set $color_normal_blue   #458588
-set $color_normal_purple #b16286
-set $color_normal_aqua   #689d6a
-set $color_normal_gray   #a89984
-set $color_bright_fg     #ebdbb2
-
-# Colors                  border                 background             text                indicator              child_border
-client.focused            $color_normal_bg       $color_normal_gray     $color_bright_fg    $color_normal_purple   $color_normal_bg
-client.focused_inactive   $color_normal_bg       $color_normal_gray     $color_bright_fg    $color_normal_purple   $color_normal_bg
-client.unfocused          $color_normal_bg       $color_normal_gray     $color_bright_fg    $color_normal_purple   $color_normal_bg
-client.urgent             $color_normal_yellow   $color_bright_yellow   $color_bright_fg    $color_normal_red      $color_normal_red
-client.placeholder        $color_normal_red      $color_normal_red      $color_normal_red   $color_normal_red      $color_normal_red
+# in home-manager for now
+# exec swayidle -w \
+#          timeout 300 'swaylock -f -c 000000' \
+#          timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
+#          before-sleep 'swaylock -f -c 000000'
 
 ### Apps
-# Color Control
-exec gammastep
-# 1Password
-exec ELECTRON_OZONE_PLATFORM_HINT="" 1password --silent
-# cliphost store
-exec wl-paste --type text --watch cliphist store #Stores only text data
-exec wl-paste --type image --watch cliphist store #Stores only image data
+exec mako
+exec gammastep-indicator
+exec 1password --silent
+exec wl-paste --watch cliphist store
+exec feishin
 
 ### Key bindings
 #
@@ -82,32 +65,22 @@ exec wl-paste --type image --watch cliphist store #Stores only image data
     # Start your launcher
     bindsym $mod+Space exec $menu
     # Start my fileManager
-    bindsym $mod+E exec $fileManager
+    bindsym $mod+t exec $fileManager
     # Start my browser
-    bindsym $mod+B exec $browser
+    bindsym $mod+b exec $browser
     # Lock it
     bindsym $mod+Escape exec ~/.config/sway/lock_screen.sh
-    # Power menu
-    bindsym $mod+Backspace exec rofi -show p -modi p:~/bin/rofi-power-menu
     # Screenshot
-    bindsym $mod+P exec ~/.config/sway/screenshot-select.sh
-    bindsym $mod+Shift+P exec ~/.config/sway/screenshot-full.sh
+    bindsym $mod+p exec ~/.config/sway/screenshot-select.sh
+    bindsym $mod+Shift+p exec ~/.config/sway/screenshot-full.sh
 
     # clipboard manager
-    bindsym $mod+Shift+V exec cliphist list | rofi -dmenu | cliphist decode | wl-copy
+    bindsym $mod+Shift+v exec cliphist list | fuzzel -dmenu | cliphist decode | wl-copy
     # 1Password
-    bindsym $mod+Shift+Space exec 1password --quick-access
-    # emoji picker
-    bindsym $mod+semicolon exec rofi -modi emoji -show emoji
+    bindsym $mod+Shift+Backslash exec 1password --quick-access
 
     # Kill focused window
-    bindsym $mod+Q kill
-
-    # Exit sway (logs you out of your Wayland session)
-    bindsym $mod+M exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
-
-    # Reload the configuration file
-    bindsym $mod+Shift+R reload
+    bindsym $mod+q kill
 
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
@@ -115,28 +88,14 @@ exec wl-paste --type image --watch cliphist store #Stores only image data
     # Change normal to inverse to use left mouse button for resizing and right
     # mouse button for dragging.
     floating_modifier $mod normal
-#
-# Layout stuff:
-#
-    # You can "split" the current object of your focus with
-    # $mod+b or $mod+v, for horizontal and vertical splits
-    # respectively.
-    bindsym $mod+Comma splitv
-    bindsym $mod+Period splith
 
-    # Switch the current container between different layout styles
-    bindsym $mod+S layout stacking
-    bindsym $mod+W layout tabbed
-    bindsym $mod+T layout toggle split
+    # Reload the configuration file
+    bindsym $mod+Shift+c reload
+    bindsym $mod+Shift+r reload
 
-    # Make the current focus fullscreen
-    bindsym $mod+F fullscreen
-    # Toggle the current focus between tiling and floating mode
-    bindsym $mod+Shift+F floating toggle
-    # Swap focus between the tiling area and the floating area
-    bindsym $mod+Tab focus mode_toggle
-    # Move focus to the parent container
-    bindsym $mod+A focus parent
+    # Exit sway (logs you out of your Wayland session)
+    bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
+
 #
 # Moving around:
 #
@@ -151,17 +110,16 @@ exec wl-paste --type image --watch cliphist store #Stores only image data
     bindsym $mod+Up focus up
     bindsym $mod+Right focus right
 
-    # Move the window
-    bindsym $mod+Shift+h move left
-    bindsym $mod+Shift+j move down
-    bindsym $mod+Shift+k move up
-    bindsym $mod+Shift+l move right
-    # Or use $mod+Shift[up|down|left|right]
+    # Move the focused window with the same, but add Shift
+    bindsym $mod+Shift+$left move left
+    bindsym $mod+Shift+$down move down
+    bindsym $mod+Shift+$up move up
+    bindsym $mod+Shift+$right move right
+    # Ditto, with arrow keys
     bindsym $mod+Shift+Left move left
     bindsym $mod+Shift+Down move down
     bindsym $mod+Shift+Up move up
     bindsym $mod+Shift+Right move right
-
 #
 # Workspaces:
 #
@@ -190,17 +148,44 @@ exec wl-paste --type image --watch cliphist store #Stores only image data
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
 #
+# Layout stuff:
+#
+    # You can "split" the current object of your focus with
+    # $mod+b or $mod+v, for horizontal and vertical splits
+    # respectively.
+    # bindsym $mod+b splith
+    # bindsym $mod+v splitv
+    bindsym $mod+Period splith
+    bindsym $mod+Comma splitv
+
+    # Switch the current container between different layout styles
+    bindsym $mod+s layout stacking
+    bindsym $mod+w layout tabbed
+    bindsym $mod+e layout toggle split
+
+    # Make the current focus fullscreen
+    bindsym $mod+f fullscreen
+
+    # Toggle the current focus between tiling and floating mode
+    bindsym $mod+Shift+Space floating toggle
+
+    # Swap focus between the tiling area and the floating area
+    bindsym $mod+$alt+f focus mode_toggle
+
+    # Move focus to the parent container
+    bindsym $mod+a focus parent
+#
 # Scratchpad:
 #
     # Sway has a "scratchpad", which is a bag of holding for windows.
     # You can send windows there and get them back later.
 
     # Move the currently focused window to the scratchpad
-    bindsym $mod+Shift+Minus move scratchpad
+    bindsym $mod+Shift+minus move scratchpad
 
     # Show the next scratchpad window or hide the focused scratchpad window.
     # If there are multiple scratchpad windows, this command cycles through them.
-    bindsym $mod+Minus scratchpad show
+    bindsym $mod+minus scratchpad show
 #
 # Resizing containers:
 #
@@ -213,22 +198,12 @@ mode "resize" {
     bindsym $down resize grow height 10px
     bindsym $up resize shrink height 10px
     bindsym $right resize grow width 10px
-    # also with the mod
-    bindsym $mod+$left resize shrink width 10px
-    bindsym $mod+$down resize grow height 10px
-    bindsym $mod+$up resize shrink height 10px
-    bindsym $mod+$right resize grow width 10px
 
     # Ditto, with arrow keys
     bindsym Left resize shrink width 10px
     bindsym Down resize grow height 10px
     bindsym Up resize shrink height 10px
     bindsym Right resize grow width 10px
-    # also with the mod
-    bindsym $mod+Left resize shrink width 10px
-    bindsym $mod+Down resize grow height 10px
-    bindsym $mod+Up resize shrink height 10px
-    bindsym $mod+Right resize grow width 10px
 
     # Return to default mode
     bindsym Return mode "default"
@@ -236,25 +211,30 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 #
-# Hardwar keys
+# Utilities:
 #
-
-# Brightness
-bindsym XF86MonBrightnessDown exec light -U 10
-bindsym XF86MonBrightnessUp exec light -A 10
-
-# # Volume
-# bindsym XF86AudioRaiseVolume exec 'pactl set-sink-volume @DEFAULT_SINK@ +1%'
-# bindsym XF86AudioLowerVolume exec 'pactl set-sink-volume @DEFAULT_SINK@ -1%'
-# bindsym XF86AudioMute exec 'pactl set-sink-mute @DEFAULT_SINK@ toggle'
-
-# Audio
-bindsym XF86AudioRaiseVolume exec "wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+; pkill -RTMIN+8 waybar"
-bindsym XF86AudioLowerVolume exec "wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-; pkill -RTMIN+8 waybar"
-bindsym XF86AudioMute exec "wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle; pkill -RTMIN+8 waybar"
+    # Special keys to adjust volume via PulseAudio
+    bindsym --locked XF86AudioMute exec wpctl set-sink-mute \@DEFAULT_SINK@ toggle
+    bindsym --locked XF86AudioLowerVolume exec wpctl set-sink-volume \@DEFAULT_SINK@ -5%
+    bindsym --locked XF86AudioRaiseVolume exec wpctl set-sink-volume \@DEFAULT_SINK@ +5%
+    bindsym --locked XF86AudioMicMute exec wpctl set-source-mute \@DEFAULT_SOURCE@ toggle
+    # Special keys to adjust brightness via brightnessctl
+    bindsym --locked XF86MonBrightnessDown exec brightnessctl set 5%-
+    bindsym --locked XF86MonBrightnessUp exec brightnessctl set 5%+
+    # Special keys to control player
+    bindsym --locked XF86AudioPlay exec playerctl play-pause
+    bindsym --locked XF86AudioPause exec playerctl play-pause
+    bindsym --locked XF86AudioNext exec playerctl next
+    bindsym --locked XF86AudioPrev exec playerctl previous
+    bindsym --locked XF86AudioStop exec playerctl stop
+    # Special Search Key
+    bindsym XF86Search exec echo search key
+    # Special key to take a screenshot with grim
+    bindsym Print exec ~/.config/sway/screenshot-select.sh
 
 #
 # Status Bar:
+#
 # Read `man 5 sway-bar` for more information about this section.
 bar {
   swaybar_command waybar
@@ -264,5 +244,40 @@ bar {
 ## Rename Some windows
 #
 for_window [shell="xwayland"] title_format "[XWayland] %title"
+
+#
+# Theme
+#
+
+font "Noto" 12
+smart_borders on
+
+## set primary Rosé Pine Moon colorscheme colors
+set $base           #232136
+set $surface        #2a273f
+set $overlay        #393552
+set $muted          #6e6a86
+set $subtle         #908caa
+set $text           #e0def4
+set $love           #eb6f92
+set $gold           #f6c177
+set $rose           #ea9a97
+set $pine           #3e8fb0
+set $foam           #9ccfd8
+set $iris           #c4a7e7
+set $highlightlow   #2a283e
+set $highlightmed   #44415a
+set $highlighthigh  #56526e
+
+# Teming border and Windows --------------
+# target                title          bg             text     indicator border
+client.focused          $highlightlow  $highlightlow  $text    $iris     $highlightlow
+client.focused_inactive $muted         $muted         $subtle  $muted    $muted
+client.unfocused        $muted         $muted         $subtle  $muted    $muted
+client.urgent           $love          $love          $text    $love     $love
+client.placeholder      $base          $base          $text    $base     $base
+client.background       $base
+
+# TODO: set up sway systemd target and start it here
 
 include /etc/sway/config.d/*
