--- a/home/.config/fuzzel/fuzzel.ini
+++ b/home/.config/fuzzel/fuzzel.ini
@@ -1,4 +1,4 @@
-font=Noto Serif:size=21
+font=SF Pro:size=21
 use-bold=true
 width=20
 
@@ -7,7 +7,7 @@ match-mode=fuzzy
 icons-enabled=yes
 icon-theme=rose-pine
 
-terminal=ghostty -e
+terminal=foot
 
 # RosePine Dawn
 [colors]
