--- a/home/.config/mako/config
+++ b/home/.config/mako/config
@@ -10,23 +10,23 @@ icons=1
 max-icon-size=64
 default-timeout=5000
 ignore-timeout=1
-font=Hack 12
+font=SF Pro Display 13
 
 output=DP-2
 
-background-color=#26233a
-text-color=#e0def4
-border-color=#524f67
-progress-color=over #31748f
+background-color=#faf4ed
+text-color=#575279
+border-color=#56949f
+progress-color=over #fffaf3
 
 [urgency=low]
-border-color=#e0def4
+border-color=#f4ede8
 
 [urgency=normal]
-border-color=#3e8fb0
+border-color=#286983
 
 [urgency=high]
-border-color=#eb6f92
+border-color=#b4637a
 default-timeout=0
 
 [category=mpris]
