feat(waybar): drop swap

--- a/home/.config/waybar/config.jsonc
+++ b/home/.config/waybar/config.jsonc
@@ -17,7 +17,7 @@
     "format": " {usage}%"
   },
   "memory": {
-    "format": "󰗈 {percentage}% 󰗈󰋊 {swapPercentage}%"
+    "format": "󰗈 {percentage}%"
   },
   "disk": {
     "interval": 60,
