--- a/home/.config/waybar/config.jsonc
+++ b/home/.config/waybar/config.jsonc
@@ -154,6 +154,7 @@
     "gamemode",
     "systemd-failed-units",
     "custom/weather",
+    "custom/tomat",
     "clock",
     "custom/lock",
     "custom/logout",
@@ -189,6 +190,15 @@
     "format": "{}",
     "interval": 1800,
     "exec": "curl -s 'wttr.in?m&format=1'"
+  },
+  "custom/tomat": {
+    "exec": "tomat status",
+    "interval": 1,
+    "return-type": "json",
+    "format": "{text}",
+    "tooltip": true,
+    "on-click": "tomat toggle",
+    "on-click-right": "tomat skip"
   },
   "clock": {
     "format": "{:%a, %b %d%H:%M}",
