fix(waybar): battery icon

--- a/home/.config/waybar/config.jsonc
+++ b/home/.config/waybar/config.jsonc
@@ -31,7 +31,7 @@
     },
     "format": "{icon} {capacity}%",
     "format-full": "{icon} {capacity}%",
-    "format-charging": " {capacity}% ",
+    "format-charging": "󱎗 {capacity}% ",
     "format-plugged": " {capacity}% ",
     "format-alt": "{icon} {time}",
     // "format-good": "", // An empty format will hide the module
