feat(waybar): we using power manager now

--- a/home/.config/waybar/config.jsonc
+++ b/home/.config/waybar/config.jsonc
@@ -9,6 +9,7 @@
     "wireplumber",
     "wireplumber#source",
     "battery",
+    "power-profiles-daemon",
     "backlight",
     "mpris"
   ],
@@ -58,6 +59,17 @@
       "",
       ""
     ]
+  },
+  "power-profiles-daemon": {
+    "format": "{icon}",
+    "tooltip-format": "Power profile: {profile}\nDriver: {driver}",
+    "tooltip": true,
+    "format-icons": {
+      "default": "",
+      "performance": "",
+      "balanced": "",
+      "power-saver": ""
+    }
   },
   "wireplumber": {
     "format": " {volume}%",
