feat(lazygit): delta for lazygit

--- a/home/.config/lazygit/config.yml
+++ b/home/.config/lazygit/config.yml
@@ -1,4 +1,6 @@
 ---
 git:
   autoFetch: false
+  pagers:
+    - pager: delta --dark --paging=never --line-numbers --hyperlinks --hyperlinks-file-link-format="lazygit-edit://{path}:{line}"
 notARepository: "quit"
