--- a/home/.config/waybar/config.jsonc
+++ b/home/.config/waybar/config.jsonc
@@ -3,15 +3,15 @@
   "margin-left": 5,
   "margin-right": 5,
   "modules-left": [
+    "power-profiles-daemon",
+    "battery",
     "cpu",
     "memory",
     "disk",
     "wireplumber",
     "wireplumber#source",
-    "battery",
-    "power-profiles-daemon",
-    "backlight",
-    "mpris"
+    "mpris",
+    "backlight"
   ],
   "cpu": {
     "format": " {usage}%"
@@ -143,16 +143,13 @@
   },
   "modules-right": [
     "tray",
+    "custom/tomat",
     "custom/recording",
     "gamemode",
     "systemd-failed-units",
     "custom/weather",
-    "custom/tomat",
     "clock",
-    "custom/lock",
-    "custom/logout",
-    "custom/reboot",
-    "custom/shutdown"
+    "group/power"
   ],
   "tray": {
     "icon-size": 18,
@@ -209,6 +206,16 @@
         "today": "<span color='#ff6699'><b><u>{}</u></b></span>"
       }
     }
+  },
+  "group/power": {
+    "orientation": "horizontal",
+    "drawer": {},
+    "modules": [
+      "custom/lock",
+      "custom/logout",
+      "custom/reboot",
+      "custom/shutdown"
+    ]
   },
   "custom/lock": {
     "format": "󰌾",
