fix(waybar): move music to end

--- a/home/.config/waybar/config.jsonc
+++ b/home/.config/waybar/config.jsonc
@@ -11,8 +11,8 @@
     "disk",
     "wireplumber",
     "wireplumber#source",
-    "mpris",
-    "backlight"
+    "backlight",
+    "mpris"
   ],
   "cpu": {
     "format": " {usage}%"
