--- a/home/.config/tmux/tmux.conf
+++ b/home/.config/tmux/tmux.conf
@@ -43,6 +43,8 @@ set -g history-limit 50000
 set -g renumber-windows on
 set -g clock-mode-style 24
 
+set -g monitor-activity on
+
 # NeoVim Requests this
 set -sg escape-time 10
 set -sg focus-events on
