style(waybar): return center and transperancy theme

--- a/home/.config/waybar/config.jsonc
+++ b/home/.config/waybar/config.jsonc
@@ -10,11 +10,12 @@
     "systemd-failed-units",
     "cpu",
     "memory",
-    "disk",
+    "disk"
+  ],
+  "modules-center": [
     "niri/workspaces",
     "wlr/taskbar"
   ],
-  "modules-center": [],
   "modules-right": [
     "tray",
     "custom/tomat",
