feat: drop tomat bar for now

--- a/home/.config/waybar/config.jsonc
+++ b/home/.config/waybar/config.jsonc
@@ -18,7 +18,7 @@
   ],
   "modules-right": [
     "tray",
-    "custom/tomat",
+    // "custom/tomat",
     "custom/recording",
     "group/audio",
     "backlight",
